--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,6 @@
-spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/TechItEasy
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/tech_it_easy_security?useLegacyDatetimeCode=false&serverTimezone=Europe/Amsterdam&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Moeilijkgedoe1!
+spring.jpa.hibernate.ddl-auto=none
 
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
